--- a/module2-solution/index.htm
+++ b/module2-solution/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="module2-solution/css/style.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css">
 <title>Module2-Solution</title>
 
 </head>
