--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,15 +9,30 @@
 </head>
 <body>
 <h1>Our Menu</h1>
+<div class="container">
 
-  <section class="col-lg-4 col-md-6 col-sm-12 "><div id="title1">Chicken</div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></section>
-  <section class="col-lg-4 col-md-6 col-sm-12"><div id="title2">Beef</div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></section>
-  <section class="col-lg-4 col-md-12 col-sm-12"><div id="title3">Sushi</div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></section>
+    <div class=" col-lg-4 col-md-6 col-sm-12 ">
+      <div class="section">
+       <div id="title1">Chicken</div>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+     </div>
+    </div>
 
+   <div class=" col-lg-4 col-md-6 col-sm-12">
+      <div class="section">
+        <div id="title2">Beef</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+     </div>
+   </div>
 
+   <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="section">
+      <div id="title3">Sushi</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+   </div>
+    
+</div>
 
 </body>
 </html>
